# mydude

./: .dockerignore  .gitignore  .replit  Dockerfile  docker-compose.yml  docker-entrypoint.sh  main.py  model_cache.json  package-lock.json  package.json  pyproject.toml  replit.md  skills-lock.json
agentledger/: README.md  __init__.py  agent_ledger.db-journal  db.py  models.py  query.py  seed.py
attached_assets/: Pasted--Bonado-TOTAL-STACK-Local-Azure-Agent-Runtime-Routing-G_1780817106135.txt  Pasted--DevGov-Provider-Agnostic-Sidecar-Architecture-Project-_1781483980767.txt  Pasted--Documentation-Index-Fetch-the-complete-documentation-i_1781225921130.txt  Pasted--SYSTEM-ROLE-MISSION-You-are-an-Elite-Enterprise-AI-Arc_1781194703648.txt  Pasted--cognition-Micro-level-inference-reflection-honest-scop_1781192870068.txt  Pasted--cognition-Micro-level-inference-reflection-honest-scop_1781194134635.txt  Pasted-7-potential-vulnerabilities-found-Last-ran-on-2-22-pm-F_1771791988874.txt  Pasted-Agent-to-agent-synthesis-CPAA-Code-Atlas-62-Segment-Eng_1771223438608.txt  Pasted-Based-on-the-architectural-deep-dives-pipeline-telemetr_1781491078248.txt  Pasted-Based-on-the-architecture-we-ve-built-and-audited-throu_1781491442680.txt  Pasted-Based-on-the-extensive-structural-evolution-and-competi_1781491479813.txt  Pasted-Below-is-a-final-runnable-Replit-Telegram-bot-that-impl_1771217442264.txt  Pasted-DSPy-prompt-evolution-is-one-of-the-most-powerful-mecha_1781057097845.txt  Pasted-Extracting-a-highly-customized-commercial-grade-archite_1781491616262.txt  (+33 more)
config/: providers.toml
docs/: cancel-live-verification-runbook.md  (+3 more)
(+2563 files in other folders)
