[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "google-generativeai>=0.8.6",
    "openai>=2.21.0",
    "psycopg2-binary>=2.9.11",
    "python-telegram-bot>=22.6",
    "sqlalchemy>=2.0.46",
]
