[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "cryptography>=46.0.5",
    "fastapi>=0.131.0",
    "google-generativeai>=0.8.6",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "psycopg2-binary>=2.9.11",
    "python-multipart>=0.0.22",
    "python-telegram-bot>=22.6",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.41.0",
]
