[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.79.0",
    "cryptography>=46.0.7",
    "dspy>=3.2.1",
    "fastapi>=0.115.0",
    "google-generativeai>=0.8.6",
    "idna>=3.15",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.21.0",
    "optuna>=4.9.0",
    "paramiko>=5.0.0",
    "playwright>=1.60.0",
    "psycopg2-binary>=2.9.11",
    "pyasn1>=0.6.3",
    "python-multipart>=0.0.27",
    "python-telegram-bot>=22.6",
    "pyyaml>=6.0.3",
    "requests>=2.33.0",
    "sqlalchemy>=2.0.46",
    "starlette>=0.47.2",
    "urllib3>=2.7.0",
    "uvicorn>=0.41.0",
]
